--- a/experiments/1-text-pilot/css/local-style.css
+++ b/experiments/1-text-pilot/css/local-style.css
@@ -24,4 +24,15 @@
 }
 
 
+.progress {
+    position: absolute;
+    top: 10px;
+    right: 50%;
+    margin-right: -133;
+}
 
+.slide {
+    padding-top: 40px;
+    /*padding-bottom: 50px;*/
+
+}
