--- a/experiments/9-english-QUD-revised/css/local-style.css
+++ b/experiments/9-english-QUD-revised/css/local-style.css
@@ -24,6 +24,22 @@
 
 #practiceStory {
 	border: 3px solid black;
+	width: 250px;
+	height: 400px;
+	padding: 15px;
+}
+
+.storyText {
+	text-align: left;
+	font-size: 17;
+	height: 85%;
+}
+
+.number {
+	text-align: center;
+	font-size: 12;
+	/*margin-top: 20px;*/
+	height: 15%;
 }
 
 #expStory {
