update position of puppet

--- a/experiments/9-english-QUD-revised/css/local-style.css
+++ b/experiments/9-english-QUD-revised/css/local-style.css
@@ -12,7 +12,7 @@
 .puppet {
 	display: inline-block;
 /*	width: 150;*/
-	position: relative;
+/*	position: relative;*/
 /*	top: -20px;*/
 	padding: 5px;
 	transform: scaleX(-1);
