--- a/experiments/10-english-goal-manipulation/css/local-style.css
+++ b/experiments/10-english-goal-manipulation/css/local-style.css
@@ -46,12 +46,14 @@
 	/*border-color: blue;*/
 }
 
+.bins {
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+}
+
 #practiceStory {
-	display: inline-block;
 	border: 3px solid black;
-	width: 250px;
-	height: 400px;
-	padding: 15px;
 }
 
 /*.elephant {
