--- a/experiments/8-expanded-english/css/local-style.css
+++ b/experiments/8-expanded-english/css/local-style.css
@@ -30,6 +30,19 @@
 	border: 3px solid black;
 }
 
+figcaption {
+  display: block;
+}
+
+figure{
+	display:inline-block;
+}
+
+.bins {
+	display: inline-block;
+/*  	margin-left: auto;
+  	margin-right: auto;*/
+}
 
 .progress {
     position: absolute;
