--- a/experiments/10-english-goal-manipulation/css/local-style.css
+++ b/experiments/10-english-goal-manipulation/css/local-style.css
@@ -11,80 +11,38 @@
 
 .puppet {
 	display: inline-block;
-/*	width: 150;*/
-/*	position: relative;*/
-/*	top: -20px;*/
+	/*width: 150;
+	position: relative;
+	top: -20px;*/
 	padding: 5px;
 	transform: scaleX(-1);
 }
 
-/*.p_hidden_listen{
-	display: inline-block;
-	position: relative;
-	top: -150px;
-	margin-right: -133;
-	transform: scaleX(-1);
-}*/
-
-/*.hidden_listen{
-	display: inline-block;
-	position: relative;
-	top: -150px;
-	margin-right: -133;
-	transform: scaleX(-1);
-}*/
-
 .center {
 	display: inline-block;
-}
-
-.elephant_story {
-	display: inline-block;
-	padding: 0px;
-	min-height: 1px;
-	width:200px;
-	/*border-color: blue;*/
-}
-
-.bins {
-	display: block;
-  	margin-left: auto;
-  	margin-right: auto;
 }
 
 #practiceStory {
 	border: 3px solid black;
 }
 
-/*.elephant {
-	border: 2px solid blue;
-}
-
-.shark {
-	border: 2px solid red;
-}*/
-
-.storyText {
-	text-align: left;
-	font-size: 17;
-	height: 85%;
-}
-
-.number {
-	text-align: center;
-	font-size: 12;
-	/*margin-top: 20px;*/
-	height: 15%;
-}
-
 #expStory {
-	display: inline-block;
 	border: 3px solid black;
-	width: 250px;
-	height: 400px;
-	padding: 15px;
 }
 
+figcaption {
+  display: block;
+}
+
+figure{
+	display:inline-block;
+}
+
+.bins {
+	display: inline-block;
+/*  	margin-left: auto;
+  	margin-right: auto;*/
+}
 
 .progress {
     position: absolute;
