--- a/experiments/10-english-goal-manipulation/css/local-style.css
+++ b/experiments/10-english-goal-manipulation/css/local-style.css
@@ -22,14 +22,35 @@
 	display: inline-block;
 }
 
+.elephant_story {
+	display: inline-block;
+	padding: 0px;
+	min-height: 1px;
+	width:200px;
+	/*border-color: blue;*/
+}
+
 #practiceStory {
 	border: 3px solid black;
 }
 
-#expStory {
-	border: 3px solid black;
+.storyText {
+	position: relative;
+	text-align: left;
+	font-size: 17;
+	height: 85%;
 }
 
+#expStory {
+	display: inline-block;
+	border: 3px solid black;
+	width: 300px;
+	height: 400px;
+	padding: 15px;
+}
+
+
+/*
 figcaption {
   display: block;
 }
@@ -37,7 +58,7 @@ figcaption {
 figure{
 	display:inline-block;
 }
-
+*/
 .bins {
 	display: inline-block;
 /*  	margin-left: auto;
