--- a/experiments/12-english-multi-trial-goal-structure/css/local-style.css
+++ b/experiments/12-english-multi-trial-goal-structure/css/local-style.css
@@ -11,6 +11,17 @@
 
 .puppet {
 	display: inline-block;
+	vertical-align: middle;
+	/*width: 150;
+	position: relative;
+	top: -20px;*/
+	padding: 5px;
+	transform: scaleX(-1);
+}
+
+.shark {
+	display: inline-block;
+	/*vertical-align: middle;*/
 	/*width: 150;
 	position: relative;
 	top: -20px;*/
@@ -37,12 +48,13 @@
 .storyText {
 	position: relative;
 	text-align: left;
-	font-size: 17;
+	/*font-size: 17;*/
 	height: 85%;
 }
 
 #expStory {
 	display: inline-block;
+	vertical-align: middle;
 	border: 3px solid black;
 	width: 300px;
 	height: 400px;
